[package]
name = "blocktree"
version = "0.1.0"
edition = "2021"
description = "A tree-based blockchain for interstellar DApps, AI-driven DeFi, and edge computing"
license = "MIT"
repository = "https://github.com/unit-index/blocktree"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.32"
rand = "0.8"
chrono = "0.4"
tokio = { version = "1.35", features = ["full"] }
rs_merkle = "1.5"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
